# sudoku-tui

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  render.yaml
.github/workflows/: release.yml
crates/sudoku-core/: Cargo.toml
crates/sudoku-core/src/: board.rs  difficulty.rs  elo.rs  lib.rs  protocol.rs  puzzle.rs  validation.rs
crates/sudoku-server/: Cargo.toml
crates/sudoku-server/src/: db.rs  lib.rs  main.rs  routes.rs  state.rs  ws.rs
crates/sudoku-server/tests/: integration.rs
crates/sudoku-tui/: Cargo.toml
crates/sudoku-tui/src/: app.rs  game.rs  hint.rs  main.rs  ui.rs
crates/sudoku-tui/src/net/: client.rs  mod.rs
src/: app.rs  game.rs  hint.rs  main.rs  puzzle.rs  ui.rs
