[workspace]
members = ["crates/sudoku-core", "crates/sudoku-tui", "crates/sudoku-server"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
sudoku-core = { path = "crates/sudoku-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.10.0"
