[package]
name = "sudoku-server"
version.workspace = true
edition.workspace = true

[dependencies]
sudoku-core = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", features = ["json"] }
dashmap = "6"
tower-http = { version = "0.6", features = ["cors"] }
rand = { workspace = true }
