[package]
name = "sudoku-server"
version.workspace = true
edition.workspace = true

[lib]
name = "sudoku_server"
path = "src/lib.rs"

[[bin]]
name = "sudoku-server"
path = "src/bin/main.rs"

[dependencies]
sudoku-core = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", features = ["json"] }
dashmap = "6"
tower-http = { version = "0.6", features = ["cors"] }
rand = { workspace = true }

[dev-dependencies]
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"
