[package]
name = "sudoku-tui"
version.workspace = true
edition.workspace = true

[dependencies]
sudoku-core = { workspace = true }
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0"
rand = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
